# BXAtlas

./: .gitignore  README.md  __init__.py  blender_manifest.toml  bxatlas_base.py  bxatlas_utils.py  old.py  ui.py
BXAtlas_CTypes/: CMakeLists.txt  bxatlas_data.py
BXAtlas_CTypes/include/: bxatlas.h
BXAtlas_CTypes/sources/: bxatlas.cpp  xatlas.cpp
